@@ -1,3 +1,10 @@
+2008-09-19  Owen Taylor  <otaylor@redhat.com>
+
+	Small cleanups to debug messages for GtkPlug/GtkSocket
+
+	* gtk/gtksocket-x11.c: Fix debug message to say "Socket" not "Plug"
+	* gtk/gtkplug-x11.c: Remove excess newlines from the ends of debug messages.
+
 2008-09-19  Carlos Garnacho  <carlos@imendio.com>
 
 	Bug 83935 – GtkEntry's default invisible char should be U+25CF
